Index recipes display in browser
Create show recipes button.
Display the index of recipes on the browser when user clicks show recipe button

--- a/index.html
+++ b/index.html
@@ -13,10 +13,9 @@
     </head>
     <body>
       <h1>EFFERVESS</h1>
-<!--Unauthenticated-->
+  <!--Unauthenticated-->
       <div id="unauthenticated">
       <!--Sign Up-->
-
         <form id="sign-up">
           <div>
           <input name="credentials[email]" type="text" placeholder="username" />
@@ -33,27 +32,30 @@
           <button type="submit" class="signin">Sign In</button>
         </div>
         </form>
-
+      <!--Display messages on the unauth view-->
       <p id="unauth-message"></p>
 
     </div>
-
+    <!--Authenticated-->
     <div id="authenticated">
-
+        <!--Display messages on the Auth view-->
         <p id="auth-message"></p>
-
+        <!--Change Password-->
         <form id="change-pw">
           <input name="passwords[old]" type="password" placeholder="old password" />
           <input name="passwords[new]" type="password" placeholder="new password" />
           <button class="changepw" type="submit">Change Password</button>
         </form>
-
-
+        <!--Sign Out-->
         <form id="sign-out">
-          <button class"signout" type="submit">Sign Out</button>
+          <button class="signout" type="submit">Sign Out</button>
+        </form>
+        <!--Show all recipes-->
+        <form id="show-recipes">
+          <button class="index" type="submit">Show Recipes</button>
         </form>
 
-      <p>This is where show recipes button is</p>
+      <div id="content" class="content"></div>
 
     </div>
 
