--- a/index.html
+++ b/index.html
@@ -55,7 +55,34 @@
           <button class="index" type="submit">Show Recipes</button>
         </form>
 
+        <form id="create-recipe">
+          <input name="recipe[beerName]" type="text" placeholder="BEER NAME" />
+          <input name="recipe[batchSize]" type="text" placeholder="HOW MANY GALLONS" />
+          <input name="recipe[grainBill]" type="text" placeholder="GRAINS" />
+          <input name="recipe[hopProfile]" type="text" placeholder="HOPS" />
+          <input name="recipe[hopSchedule]" type="text" placeholder="HOP ADDITIONS" />
+          <input name="recipe[dryHop]" type="text" placeholder="DRY HOPS" />
+          <input name="recipe[yeast]" type="text" placeholder="YEAST" />
+          <input name="recipe[directions]" type="text" placeholder="DIRECTIONS" />
+          <input name="recipe[note]" type="text" placeholder="ANY NOTES?" />
+          <button class="createRecipe" type="submit">Create Recipe!</button>
+        </form>
+
+        <form id="update-recipe">
+          <input name="recipe[_id]" type="text" placeholder="BEER ID" />
+          <input name="recipe[batchSize]" type="text" placeholder="HOW MANY GALLONS" />
+          <input name="recipe[grainBill]" type="text" placeholder="GRAINS" />
+          <input name="recipe[hopProfile]" type="text" placeholder="HOPS" />
+          <input name="recipe[hopSchedule]" type="text" placeholder="HOP ADDITIONS" />
+          <input name="recipe[dryHop]" type="text" placeholder="DRY HOPS" />
+          <input name="recipe[yeast]" type="text" placeholder="YEAST" />
+          <input name="recipe[directions]" type="text" placeholder="DIRECTIONS" />
+          <input name="recipe[note]" type="text" placeholder="ANY NOTES?" />
+          <button class="updateRecipe" type="submit">Update Recipe!</button>
+        </form>
+
       <div id="content" class="content"></div>
+      <div id="deleteSuccess"></div>
 
     </div>
 
