User able to access one resource
Created path to db for user to access one specific resource

--- a/index.html
+++ b/index.html
@@ -81,6 +81,11 @@
           <button class="updateRecipe" type="submit">Update Recipe!</button>
         </form>
 
+        <form id="show-recipe">
+          <input name="recipe[_id]" type="text" placeholder="BEER ID" />
+          <button class="showRecipe" type="submit">I Want One Recipe</button>
+        </form>
+
       <div id="content" class="content"></div>
       <div id="deleteSuccess"></div>
 
