Forms clear on submission

--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
         </form>
 
       <div id="content" class="content"></div>
+      <div id="failed"></div>
       <div id="deleteSuccess"></div>
 
     </div>
