Auth page layout and style updated
Created new background and imported font

--- a/index.html
+++ b/index.html
@@ -12,53 +12,53 @@
       <script src="public/application.js" type="text/javascript" charset="utf-8" defer></script>
     </head>
     <body>
-      <h1>EFFERVESS</h1>
+      <h1>effervess</h1>
 
   <!--Unauthenticated-->
       <div id="unauthenticated">
       <!--Sign Up-->
     <form id="sign-up" class="container">
-      <label for="sign-up" class="row justify-content-center">Sign Up</label>
+      <label for="sign-up" class="row justify-content-center">SIGN UP</label>
       <div class="container">
         <div class="row justify-content-center">
-          <div class="col-md-4 unauth-col">
+          <div class="col-md-8 unauth-col">
             <input class="form-control justify-content-center" name="credentials[email]" type="text" placeholder="username" />
           </div>
         </div>
         <div class="row justify-content-center">
-          <div class="col-md-4 unauth-col">
+          <div class="col-md-8 unauth-col">
             <input class="form-control" name="credentials[password]" type="password" placeholder="password"/>
           </div>
         </div>
         <div class="row justify-content-center">
-          <div class="col-md-4 unauth-col">
+          <div class="col-md-8 unauth-col">
             <input class="form-control" name="credentials[password_confirmation]" type="password" placeholder="confirm password"/>
           </div>
         </div>
         <div class="row justify-content-center">
-          <div class="col-md-4 unauth-col">
-            <button class="signup btn btn-primary">Sign Up</button>
+          <div class="col-md-8 unauth-col">
+            <button class="signup btn btn-primary">SIGN UP</button>
           </div>
         </div>
       </div>
     </form>
         <!--Sign In-->
         <form id="sign-in" class="container">
-          <label for="sign-in" class="row justify-content-center">Sign In</label>
+          <label for="sign-in" class="row justify-content-center">SIGN IN</label>
           <div class="container">
             <div class="row justify-content-center">
-              <div class="col-md-4 unauth-col">
-                <input class="form-control justify-content-center" name="credentials[email]" type="text" placeholder="email" />
+              <div class="col-md-8 unauth-col">
+                <input class="form-control justify-content-center" name="credentials[email]" type="text" placeholder="username" />
               </div>
             </div>
             <div class="row justify-content-center">
-              <div class="col-md-4 unauth-col">
+              <div class="col-md-8 unauth-col">
                 <input class="form-control justify-content-center" name="credentials[password]" type="password" placeholder="password" />
               </div>
             </div>
             <div class="row justify-content-center">
-              <div class="col-md-4 unauth-col">
-                <button type="submit" class="signin btn btn-primary">Sign In</button>
+              <div class="col-md-8 unauth-col">
+                <button type="submit" class="signin btn btn-primary">SIGN IN</button>
               </div>
             </div>
           </div>
