--- a/index.html
+++ b/index.html
@@ -64,13 +64,13 @@
           </div>
         </form>
       <!--Display messages on the unauth view-->
-      <p id="unauth-message"></p>
+      <p id="unauth-message" class="message"></p>
 
     </div>
     <!--Authenticated-->
     <div id="authenticated">
         <!--Display messages on the Auth view-->
-        <p id="auth-message"></p>
+        <p id="auth-message" class="message"></p>
         <!--Change Password-->
         <form id="change-pw">
           <input name="passwords[old]" type="password" placeholder="old password" />
@@ -117,9 +117,9 @@
           <button class="showRecipe" type="submit">I Want One Recipe</button>
         </form>
 
-      <div id="content" class="content"></div>
-      <div id="failed"></div>
-      <div id="deleteSuccess"></div>
+      <div id="content" class="content message"></div>
+      <div id="failed" class="message"></div>
+      <div id="deleteSuccess" class="message"></div>
 
     </div>
   <footer>
