--- a/index.html
+++ b/index.html
@@ -86,8 +86,56 @@
           <button class="index" type="submit">Show Recipes</button>
         </form>
 
-        <form id="create-recipe">
-          <input name="recipe[beerName]" type="text" placeholder="BEER NAME" />
+        <form id="create-recipe" class="container">
+          <label for="create-recipe">Create A Recipe</label>
+          <div class="container">
+            <p class="input-step">Beer Name & Batch Size</p>
+            <div class="row justify-content-between">
+              <div class="col-md-4 recipe-input">
+                <input class="col-md-12" name="recipe[beerName]" type="text" placeholder="BEER NAME" />
+              </div>
+              <div class="col-md-4 recipe-input">
+                <input class="col-md-12" name="recipe[batchSize]" type="text" placeholder="HOW MANY GALLONS" />
+              </div>
+            </div>
+          </div>
+          <div class="container">
+            <p class="input-step">Ingredients</p>
+            <div class="row justify-content-center">
+              <div class="col-md-8 recipe-input">
+                <input class="col-md-12" name="recipe[grainBill]" type="text" placeholder="GRAINS" />
+              </div>
+              <div class="col-md-4 recipe-input">
+                <input class="col-md-12" name="recipe[hopProfile]" type="text" placeholder="HOPS" />
+              </div>
+              <div class="col-md-6 recipe-input">
+                <input class="col-md-12" name="recipe[hopSchedule]" type="text" placeholder="HOP ADDITIONS" />
+              </div>
+              <div class="col-md-3 recipe-input">
+                <input class="col-md-12" name="recipe[dryHop]" type="text" placeholder="DRY HOPS" />
+              </div>
+              <div class="col-md-3 recipe-input">
+                <input class="col-md-12" name="recipe[yeast]" type="text" placeholder="YEAST" />
+              </div>
+            </div>
+          </div>
+          <div class="container">
+            <p class="input-step">Directions</p>
+            <div class="row">
+              <div class="col-md-12 directions-input recipe-input">
+                <input class="col-md-12" name="recipe[directions]" type="text" placeholder="DIRECTIONS" />
+              </div>
+            </div>
+          </div>
+          <div class="container">
+            <div class="row">
+              <div class="col-md-3 recipe-input">
+                <button class="createRecipe btn" type="submit">CREATE RECIPE</button>
+              </div>
+            </div>
+          </div>
+
+          <!-- <input name="recipe[beerName]" type="text" placeholder="BEER NAME" />
           <input name="recipe[batchSize]" type="text" placeholder="HOW MANY GALLONS" />
           <input name="recipe[grainBill]" type="text" placeholder="GRAINS" />
           <input name="recipe[hopProfile]" type="text" placeholder="HOPS" />
@@ -96,7 +144,7 @@
           <input name="recipe[yeast]" type="text" placeholder="YEAST" />
           <input name="recipe[directions]" type="text" placeholder="DIRECTIONS" />
           <input name="recipe[note]" type="text" placeholder="ANY NOTES?" />
-          <button class="createRecipe" type="submit">Create Recipe!</button>
+          <button class="createRecipe" type="submit">Create Recipe!</button> -->
         </form>
 
         <form id="update-recipe">
@@ -117,7 +165,7 @@
           <button class="showRecipe" type="submit">I Want One Recipe</button>
         </form>
 
-      <div id="content" class="content message"></div>
+      <div id="content" class="content"></div>
       <div id="failed" class="message"></div>
       <div id="deleteSuccess" class="message"></div>
 
