--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
       <h1>effervess</h1>
 
   <!--Unauthenticated-->
-      <div id="unauthenticated">
-      <!--Sign Up-->
-    <form id="sign-up" class="container">
+  <div id="unauthenticated">
+  <!--Sign Up-->
+  <form id="sign-up" class="container">
       <label for="sign-up" class="row justify-content-center">SIGN UP</label>
       <div class="container">
         <div class="row justify-content-center">
@@ -43,10 +43,10 @@
       </div>
     </form>
 
-      <p id="unauth-message" class="message"></p>
+  <p id="unauth-message" class="message"></p>
 
-        <!--Sign In-->
-        <form id="sign-in" class="container">
+  <!--Sign In-->
+  <form id="sign-in" class="container">
           <label for="sign-in" class="row justify-content-center">SIGN IN</label>
           <div class="container">
             <div class="row justify-content-center">
@@ -66,56 +66,53 @@
             </div>
           </div>
         </form>
-      <!--Display messages on the unauth view-->
 
-    </div>
-    <!--Authenticated-->
-    <div id="authenticated">
+  </div>
+  <!--Authenticated-->
+  <div id="authenticated">
 
-        <!--Change Password-->
-        <div id="changePwBtn" class="container">
+    <!--Change Password-->
+        <div class="container">
           <div class="row">
-            <div class="col">
-              <button class="btn toChangePw">Change Password</button>
+            <div id="changePwBtn" class="col">
+                  <button class="btn toChangePw">Change Password</button>
             </div>
           </div>
-        </div>
-
-        <form id="change-pw" class="container">
-          <div class="row">
-            <div class="col">
-              <input class="form-control" name="passwords[old]" type="password" placeholder="old password" />
-            </div>
-          </div>
-          <div class="row">
-            <div class="col">
-              <input class="form-control" name="passwords[new]" type="password" placeholder="new password" />
-            </div>
-          </div>
-          <div class="row">
-            <div class="col">
-              <button class="changepw btn" type="submit">Change Password</button>
-            </div>
-          </div>
-        </form>
-
-        <!--Sign Out-->
-        <form id="sign-out">
-          <div class="container">
             <div class="row">
-              <div class="col">
-                <button class="sign-out btn" type="submit">Sign Out</button>
-              </div>
+              <form id="change-pw">
+                <div class="col-md-12">
+                  <input class="form-control" name="passwords[old]" type="password" placeholder="old password" />
+                </div>
+                <div class="col-md-12">
+                  <input class="form-control" name="passwords[new]" type="password" placeholder="new password" />
+                </div>
+                  <div class="col">
+                    <button class="changepw btn" type="submit">Change Password</button>
+                  </div>
+              </form>
+            </div>
+            <div class="row">
+              <form id="sign-out">
+                <div class="col">
+                  <button class="sign-out btn" type="submit">Sign Out</button>
+                </div>
+              </form>
             </div>
           </div>
-        </form>
 
         <p id="auth-message" class="message"></p>
 
+    <!-- Where the recipes will display -->
+    <div id="content" class="content"></div>
         <!--Show all recipes-->
-        <form id="show-recipes">
-          <button class="index btn" type="submit">Show Recipes</button>
-        </form>
+        <div class="container">
+          <div class="row justify-content-md-center">
+            <form id="show-recipes" class="col">
+              <button class="index btn" type="submit">Show Recipes</button>
+            </form>
+          </div>
+        </div>
+
 
         <form id="create-recipe" class="container">
           <label for="create-recipe">Create A Recipe</label>
@@ -235,7 +232,7 @@
 
         <form id="show-recipe">
           <input name="recipe[_id]" type="text" placeholder="BEER ID" />
-          <button class="showRecipe" type="submit">I Want One Recipe</button>
+          <button class="showRecipe btn" type="submit">I Want One Recipe</button>
         </form>
 
       <div id="content" class="content"></div>
