Create recipe is not a button that shows new view
Create a button that shows a new view that allows you to actually create the recipe

--- a/index.html
+++ b/index.html
@@ -120,6 +120,13 @@
           <button class="showRecipe btn" type="submit">I Want One Recipe</button>
         </form>
 
+        <div id="createNewRecipe" class="container">
+          <div class="row">
+            <div class="col">
+              <button class="createNewRecipe btn">Create A Recipe</button>
+            </div>
+          </div>
+        </div>
 
         <form id="create-recipe" class="container">
           <label for="create-recipe">Create A Recipe</label>
