Update recipe now has a button to show form fields

--- a/index.html
+++ b/index.html
@@ -186,6 +186,14 @@
           </div>
         </form>
 
+        <div id="updateRecipe" class="container">
+          <div class="row">
+            <div class="col">
+              <button class="createNewRecipe btn">Update A Recipe</button>
+            </div>
+          </div>
+        </div>
+
         <form id="update-recipe" class="container">
           <label for="update-recipe">Update Your Recipe</label>
           <div class="container">
